--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "lint": "lint-staged",
     "prepublishOnly": "yarn build",
     "format": "prettier --write \"packages/**/*.{ts,tsx,js,jsx,md,json}\"",
-    "version-packages": "lerna version --conventional-commits --force-git-tag --create-release github --yes",
-    "publish:pkgs": "lerna publish from-git --no-verify-access --yes",
+    "version:prerelease": "lerna version --conventional-commits --no-changelog --conventional-prerelease --no-git-tag-version --preid=beta --yes",
+    "version:release": "lerna version --conventional-commits --force-git-tag --create-release github --conventional-graduate --yes",
+    "publish:pkgs": "lerna publish from-package --no-verify-access --yes",
     "postinstall": "husky install && lerna bootstrap",
     "bs": "lerna bootstrap",
     "hoist-deps": "lerna clean -y && lerna bootstrap",
