--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     ]
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.321.1",
     "@nestjs/axios": "^2.0.0",
     "@nestjs/class-validator": "^0.13.3",
     "@nestjs/common": "^9.4.0",
@@ -66,6 +67,7 @@
     "axios": "^1.3.6",
     "axios-retry": "^3.4.0",
     "camunda-external-task-client-js": "^2.3.1",
+    "dynamoose": "^3.2.0",
     "lodash": "^4.17.21",
     "mongodb": "^5.3.0",
     "mysql": "^2.18.1",
