--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "prebuild": "rimraf ./dist",
     "build": "turbo run build --concurrency=1",
     "test": "turbo run test --concurrency=1",
+    "posttest": "yarn report",
     "clean": "turbo run clean",
-    "postclean": "rimraf ./yarn.lock ./package-lock.json ./dist ./node_modules",
+    "postclean": "rimraf ./yarn.lock ./package-lock.json ./dist ./mochawesome-report ./mochawesome.json ./node_modules",
     "lint": "lint-staged",
     "prepublishOnly": "yarn build",
     "format": "prettier --write \"packages/**/*.{ts,tsx,js,jsx,md,json}\"",
@@ -31,7 +32,13 @@
     "postinstall": "husky install && lerna bootstrap",
     "bs": "lerna bootstrap",
     "hoist-deps": "lerna clean -y && lerna bootstrap",
-    "plop": "plop"
+    "plop": "plop",
+    "prereport": "rimraf ./mochawesome-report ./mochawesome.json",
+    "report": "yarn mochawesome:merge",
+    "postreport": "yarn mochawesome:report-generator",
+    "mochawesome:merge": "npx mochawesome-merge -f ./packages/*/test-results/*.json > mochawesome.json",
+    "mochawesome:report-generator": "npx marge -f index --autoOpen --charts --assetsDir ./mochawesome-report/assets mochawesome.json",
+    "mochawesome:report-generator2": "npx mochawesome-report-generator -f index --autoOpen --charts --assetsDir ./mochawesome-report/assets mochawesome.json"
   },
   "workspaces": [
     "packages/*"
@@ -108,6 +115,7 @@
     "@types/inline-css": "^3.0.1",
     "@types/jest": "^29.5.1",
     "@types/mocha": "^10.0.1",
+    "@types/mochawesome": "^6.2.1",
     "@types/node": "^18.15.13",
     "@types/nodemailer": "^6.4.4",
     "@types/pug": "^2.0.6",
@@ -126,6 +134,9 @@
     "lerna": "^4.0.0",
     "lint-staged": "^13.2.1",
     "mocha": "^10.2.0",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.3.0",
+    "mochawesome-report-generator": "^6.2.0",
     "nodemailer-mock": "^2.0.1",
     "plop": "^3.0.5",
     "prettier": "^2.8.7",
