--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -4,6 +4,6 @@
   "version": "0.2.4",
   "scripts": {
     "test": "echo \"Error: no test specified\"",
-    "clean": "rimraf .turbo coverage node_modules test-report.xml"
+    "clean": "rimraf .turbo coverage test-results node_modules test-report.xml"
   }
 }
