--- a/packages/dynamoose/package.json
+++ b/packages/dynamoose/package.json
@@ -30,7 +30,7 @@
     "prebuild": "rimraf ../../dist/dynamoose",
     "build": "pika build --out ../../dist/dynamoose",
     "test": "jest --runInBand --coverage --forceExit --passWithNoTests",
-    "clean": "rimraf .turbo coverage node_modules test-report.xml"
+    "clean": "rimraf .turbo coverage test-results node_modules test-report.xml"
   },
   "publishConfig": {
     "access": "public",
