--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "report": "yarn mochawesome:merge",
     "postreport": "yarn mochawesome:report-generator",
     "mochawesome:merge": "npx mochawesome-merge -f ./packages/*/test-results/*.json > mochawesome.json",
-    "mochawesome:report-generator": "npx marge -f index --autoOpen --charts --assetsDir ./mochawesome-report/assets mochawesome.json",
-    "mochawesome:report-generator2": "npx mochawesome-report-generator -f index --autoOpen --charts --assetsDir ./mochawesome-report/assets mochawesome.json"
+    "mochawesome:report-generator": "npx marge -f index --charts --assetsDir ./mochawesome-report/assets mochawesome.json"
   },
   "workspaces": [
     "packages/*"
