--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "build": "turbo run build --concurrency=1",
     "test": "turbo run test --concurrency=1",
     "test:husky": "turbo run test --concurrency=1",
-    "posttest": "yarn report",
     "clean": "turbo run clean",
     "postclean": "rimraf ./yarn.lock ./package-lock.json ./dist ./mochawesome-report ./mochawesome.json ./node_modules",
     "lint": "lint-staged",
@@ -91,11 +90,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
+    "@babel/parser": "^7.21.8",
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/plugin-proposal-decorators": "^7.20.13",
     "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
     "@babel/plugin-proposal-optional-chaining": "^7.20.7",
     "@babel/preset-typescript": "^7.21.4",
+    "@babel/traverse": "^7.21.5",
     "@commitlint/cli": "^17.5.1",
     "@commitlint/config-conventional": "^17.4.2",
     "@elastic/elasticsearch-mock": "^2.0.0",
