--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,11 @@ coverage
 /coverage
 /.nyc_output
 test-report.xml
+./packages/*/test-results
+./packages/*/test-results/*
+./mochawesome-report
+./mochawesome-report/*
+.mochawesome.json
 .sonarcloud.properties
 sonar-project.properties
 .scannerwork
