--- a/.gitignore
+++ b/.gitignore
@@ -31,9 +31,10 @@ coverage
 test-report.xml
 ./packages/*/test-results
 ./packages/*/test-results/*
+./packages/*/test-results/test-report.json
 ./mochawesome-report
 ./mochawesome-report/*
-
+./mochawesome.json
 .sonarcloud.properties
 sonar-project.properties
 .scannerwork
