chore: re install dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,7 @@ coverage
 /.nyc_output
 test-report.xml
 ./packages/*/test-results
-./packages/*/test-results/*
+./packages/*/test-results/*.json
 ./packages/*/test-results/test-report.json
 .sonarcloud.properties
 sonar-project.properties
