chore(workflow): edit deplo

--- a/.github/workflows/branches.yml
+++ b/.github/workflows/branches.yml
@@ -75,17 +75,15 @@ jobs:
 
       - name: "📤 Upload artifact"
         uses: actions/upload-pages-artifact@v1
-        if: ${{ github.ref == 'refs/heads/master' }}
         with:
           path: ./mochawesome-report
 
       - name: "🚀 Deploy Report"
         uses: peaceiris/actions-gh-pages@v3
-        if: ${{ github.ref == 'refs/heads/master' }}
         with:
           github_token: ${{ secrets.GH_TOKEN }}
           publish_dir: ./mochawesome-report
-          destination_dir: reports
+          destination_dir: mochawesome-report
 
       - name: "📊 Upload coverage report to Codecov"
         uses: codecov/codecov-action@v1
