--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -87,7 +87,7 @@ jobs:
         with:
           github_token: ${{ secrets.GH_TOKEN }}
           publish_dir: ./mochawesome-report
-          destination_dir: reports
+          destination_dir: mochawesome-report
 
       - name: "📊 Upload coverage report to Codecov"
         uses: codecov/codecov-action@v1
