--- a/.github/workflows/branches.yml
+++ b/.github/workflows/branches.yml
@@ -67,23 +67,9 @@ jobs:
         run: yarn build --force && node sonar-args.js
 
       - name: "👨‍💻 Run Test"
-        run: |
-          yarn test
-          yarn report
+        run: yarn test
         env:
           NODE_ENV: 'test'
-
-      - name: "📤 Upload artifact"
-        uses: actions/upload-pages-artifact@v1
-        with:
-          path: ./mochawesome-report
-
-      - name: "🚀 Deploy Report"
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GH_TOKEN }}
-          publish_dir: ./mochawesome-report
-          destination_dir: mochawesome-report
 
       - name: "📊 Upload coverage report to Codecov"
         uses: codecov/codecov-action@v1
