feat(core): add app stage param

--- a/.eslintrc
+++ b/.eslintrc
@@ -23,6 +23,7 @@
     "jest": true
   },
   "rules": {
+    "@typescript-eslint/no-namespace": "off",
     "@typescript-eslint/interface-name-prefix": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
