--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "camunda-external-task-client-js": "^2.3.1",
     "dynamoose": "^3.2.0",
     "lodash": "^4.17.21",
+    "luxon": "^3.3.0",
     "mongodb": "^5.3.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.3.2",
@@ -118,6 +119,7 @@
     "@types/jest": "^29.5.1",
     "@types/mocha": "^10.0.1",
     "@types/mochawesome": "^6.2.1",
+    "@types/luxon": "^3.3.0",
     "@types/node": "^20.2.3",
     "@types/nodemailer": "^6.4.8",
     "@types/pug": "^2.0.6",
@@ -149,7 +151,7 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.0",
     "tsconfig-paths": "^4.2.0",
-    "turbo": "^1.9.9",
+    "turbo": "^1.10.3",
     "typescript": "^4.9.5"
   }
 }
