--- a/packages/tracing/package.json
+++ b/packages/tracing/package.json
@@ -28,7 +28,7 @@
   "scripts": {
     "prebuild": "rimraf ../../dist/tracing",
     "build": "pika build --out ../../dist/tracing",
-    "test": "jest --runInBand --coverage --forceExit",
+    "test": "jest --runInBand --coverage --forceExit --passWithNoTests",
     "clean": "rimraf .turbo coverage test-results node_modules test-report.xml"
   },
   "publishConfig": {
@@ -39,42 +39,34 @@
     "@nestjs/common": "^9.4.2",
     "@nestjs/core": "^9.4.2",
     "@nestjs/platform-express": "^9.4.2",
-    "@opentelemetry/api": "^1.4.1",
-    "@opentelemetry/instrumentation": "^0.39.1",
-    "@opentelemetry/tracing": "^0.24.0",
-    "@opentelemetry/exporter-trace-otlp-http": "^0.39.1",
-    "@opentelemetry/resources": "^1.13.0",
-    "@opentelemetry/semantic-conventions": "^1.13.0",
-    "@opentelemetry/auto-instrumentations-node": "^0.37.0",
-    "@opentelemetry/sdk-node": "^0.39.1",
-    "@opentelemetry/sdk-trace-node": "^1.13.0",
     "@opentelemetry/core": "^1.13.0",
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.39.1",
     "@opentelemetry/id-generator-aws-xray": "^1.1.2",
     "@opentelemetry/instrumentation-http": "^0.39.1",
-    "@opentelemetry/sdk-trace-base": "^1.13.0",
-    "@opentelemetry/propagator-b3": "^1.13.0",
     "@opentelemetry/propagator-aws-xray": "^1.2.1",
+    "@opentelemetry/propagator-b3": "^1.13.0",
     "@opentelemetry/propagator-jaeger": "^1.13.0",
+    "@opentelemetry/resources": "^1.13.0",
+    "@opentelemetry/sdk-node": "^0.39.1",
+    "@opentelemetry/sdk-trace-base": "^1.13.0",
+    "@opentelemetry/semantic-conventions": "^1.13.0",
+    "luxon": "^3.3.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5"
   },
   "dependencies": {
-    "@opentelemetry/api": "^1.4.1",
-    "@opentelemetry/instrumentation": "^0.39.1",
-    "@opentelemetry/tracing": "^0.24.0",
-    "@opentelemetry/exporter-trace-otlp-http": "^0.39.1",
-    "@opentelemetry/resources": "^1.13.0",
-    "@opentelemetry/semantic-conventions": "^1.13.0",
-    "@opentelemetry/auto-instrumentations-node": "^0.37.0",
-    "@opentelemetry/sdk-node": "^0.39.1",
-    "@opentelemetry/sdk-trace-node": "^1.13.0",
     "@opentelemetry/core": "^1.13.0",
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.39.1",
     "@opentelemetry/id-generator-aws-xray": "^1.1.2",
     "@opentelemetry/instrumentation-http": "^0.39.1",
-    "@opentelemetry/sdk-trace-base": "^1.13.0",
-    "@opentelemetry/propagator-b3": "^1.13.0",
     "@opentelemetry/propagator-aws-xray": "^1.2.1",
-    "@opentelemetry/propagator-jaeger": "^1.13.0"
+    "@opentelemetry/propagator-b3": "^1.13.0",
+    "@opentelemetry/propagator-jaeger": "^1.13.0",
+    "@opentelemetry/resources": "^1.13.0",
+    "@opentelemetry/sdk-node": "^0.39.1",
+    "@opentelemetry/sdk-trace-base": "^1.13.0",
+    "@opentelemetry/semantic-conventions": "^1.13.0",
+    "luxon": "^3.3.0"
   },
   "devDependencies": {
     "@tresdoce-nestjs-toolkit/config": "^0.3.0",
