--- a/packages/tracing/package.json
+++ b/packages/tracing/package.json
@@ -28,7 +28,7 @@
   "scripts": {
     "prebuild": "rimraf ../../dist/tracing",
     "build": "pika build --out ../../dist/tracing",
-    "test": "jest --runInBand --coverage --forceExit --passWithNoTests",
+    "test": "jest --runInBand --coverage --forceExit",
     "clean": "rimraf .turbo coverage test-results node_modules test-report.xml"
   },
   "publishConfig": {
