--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,21 +77,21 @@ services:
       - ES_JAVA_OPTS=-Xms1g -Xmx1g
       - xpack.security.enabled=false
 
-  #jaeger:
-  #  image: jaegertracing/all-in-one:latest
-  #  container_name: tresdoce-test-utils-global-jaeger
-  #  restart: always
-  #  ports:
-  #    - '6831:6831/udp'
-  #    - '6832:6832/udp'
-  #    - '5778:5778'
-  #    - '16686:16686'
-  #    - '4317:4317'
-  #    - '4318:4318'
-  #    - '14250:14250'
-  #    - '14268:14268'
-  #    - '14269:14269'
-  #    - '9411:9411'
-  #  environment:
-  #    TZ: 'America/Argentina/Buenos_Aires'
-  #    COLLECTOR_OTLP_ENABLED: true
+  jaeger:
+    image: jaegertracing/all-in-one:latest
+    container_name: tresdoce-test-utils-global-jaeger
+    restart: always
+    ports:
+      - '6831:6831/udp'
+      - '6832:6832/udp'
+      - '5778:5778'
+      - '16686:16686'
+      - '4317:4317'
+      - '4318:4318'
+      - '14250:14250'
+      - '14268:14268'
+      - '14269:14269'
+      - '9411:9411'
+    environment:
+      TZ: 'America/Argentina/Buenos_Aires'
+      COLLECTOR_OTLP_ENABLED: 'true'
