--- a/packages/paas/package.json
+++ b/packages/paas/package.json
@@ -47,7 +47,8 @@
     "@tresdoce-nestjs-toolkit/core": "^0.6.0-beta.0",
     "@tresdoce-nestjs-toolkit/filters": "^0.3.1",
     "@tresdoce-nestjs-toolkit/health": "^0.4.1",
-    "@tresdoce-nestjs-toolkit/response-parser": "^0.4.1"
+    "@tresdoce-nestjs-toolkit/response-parser": "^0.4.1",
+    "@tresdoce-nestjs-toolkit/tracing": "^0.1.0-beta.0"
   },
   "devDependencies": {
     "@tresdoce-nestjs-toolkit/config": "^0.3.0",
