--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "axios-retry": "^3.5.0",
     "camunda-external-task-client-js": "^2.3.1",
     "dynamoose": "^3.2.0",
+    "fast-redact": "^3.1.2",
     "lodash": "^4.17.21",
     "luxon": "^3.3.0",
     "mongodb": "^5.3.0",
@@ -114,12 +115,13 @@
     "@types/ejs": "^3.1.1",
     "@types/elasticsearch": "^5.0.40",
     "@types/express": "^4.17.17",
+    "@types/fast-redact": "^3.0.2",
     "@types/glob": "^8.0.1",
     "@types/inline-css": "^3.0.1",
     "@types/jest": "^29.5.1",
+    "@types/luxon": "^3.3.0",
     "@types/mocha": "^10.0.1",
     "@types/mochawesome": "^6.2.1",
-    "@types/luxon": "^3.3.0",
     "@types/node": "^20.2.3",
     "@types/nodemailer": "^6.4.8",
     "@types/pug": "^2.0.6",
