--- a/.github/workflows/branches.yml
+++ b/.github/workflows/branches.yml
@@ -67,7 +67,7 @@ jobs:
         run: yarn build --force && node sonar-args.js
 
       - name: "👨‍💻 Run Test"
-        run: yarn test
+        run: yarn test --force
         env:
           NODE_ENV: 'test'
 
