chore(workflows): add force to build and test

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -66,10 +66,10 @@ jobs:
         run: yarn lint
 
       - name: "🔨 Build"
-        run: yarn build && node sonar-args.js
+        run: yarn build --force && node sonar-args.js
 
       - name: "👨‍💻 Run Test"
-        run: yarn test
+        run: yarn test --force
         env:
           NODE_ENV: 'test'
 
