--- a/packages/commons/package.json
+++ b/packages/commons/package.json
@@ -37,11 +37,13 @@
   },
   "peerDependencies": {
     "terser-webpack-plugin": "^5.3.9",
-    "webpack-node-externals": "^3.0.0"
+    "webpack-node-externals": "^3.0.0",
+    "webpack-merge": "^5.9.0"
   },
   "dependencies": {
     "terser-webpack-plugin": "^5.3.9",
-    "webpack-node-externals": "^3.0.0"
+    "webpack-node-externals": "^3.0.0",
+    "webpack-merge": "^5.9.0"
   },
   "devDependencies": {
     "@tresdoce-nestjs-toolkit/config": "^0.3.0",
