chore: work with eslint

--- a/.github/workflows/bkp/branches.yml
+++ b/.github/workflows/bkp/branches.yml
@@ -3,17 +3,29 @@ name: "Branches"
 on:
   push:
     branches: [ "feat/*", "fix/*", "refactor/*", "chore/*", "docs/*", "test/*", "build/*", "perf/*", "style/*", "revert/*" ]
-  workflow_dispatch:
-
-env:
-  NODE_VERSIONS: [ '16.14.2', '18.17.0' ]
 
 jobs:
+  setup:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node: [ '16.14.2', '18.17.0' ]
+    name: "Setup"
+    steps:
+      - name: "⚙ Set up Node.js v${{ matrix.node }}"
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node }}
+
+      - name: "✅ Checkout repository"
+        uses: actions/checkout@v3
+
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: ${{ env.NODE_VERSIONS }}
+        node: [ '16.14.2', '18.17.0' ]
+    needs: setup
     name: "Build"
     steps:
       - name: "⚙ Set up Node.js v${{ matrix.node }}"
@@ -46,7 +58,7 @@ jobs:
           GITGUARDIAN_API_KEY: ${{ secrets.GITGUARDIAN_API_KEY }}
 
       - name: "📦 Install Dependencies"
-        run: yarn install --frozen-lockfile
+        run: yarn install
 
       - name: "💅 Lint"
         run: yarn lint
@@ -60,12 +72,12 @@ jobs:
           NODE_ENV: 'test'
 
       - name: "📊 Upload coverage report to Codecov"
-        uses: codecov/codecov-action@v2
+        uses: codecov/codecov-action@v1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
 
       - name: "📊 SonarCloud Scan"
-        uses: SonarSource/sonarcloud-github-action@v1
+        uses: SonarSource/sonarcloud-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
