--- a/.github/workflows/bkp/master.yml
+++ b/.github/workflows/bkp/master.yml
@@ -1,19 +1,33 @@
-name: "Branches"
+name: "CI/CD"
 
 on:
   push:
-    branches: [ "feat/*", "fix/*", "refactor/*", "chore/*", "docs/*", "test/*", "build/*", "perf/*", "style/*", "revert/*" ]
-  workflow_dispatch:
-
-env:
-  NODE_VERSIONS: [ '16.14.2', '18.17.0' ]
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
+  setup:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node: [ '16.14.2', '18.17.0' ]
+    name: "Setup"
+    steps:
+      - name: "⚙ Set up Node.js v${{ matrix.node }}"
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node }}
+
+      - name: "✅ Checkout repository"
+        uses: actions/checkout@v3
+
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: ${{ env.NODE_VERSIONS }}
+        node: [ '16.14.2', '18.17.0' ]
+    needs: setup
     name: "Build"
     steps:
       - name: "⚙ Set up Node.js v${{ matrix.node }}"
@@ -42,11 +56,11 @@ jobs:
           GITHUB_PUSH_BEFORE_SHA: ${{ github.event.before }}
           GITHUB_PUSH_BASE_SHA: ${{ github.event.base }}
           GITHUB_PULL_BASE_SHA: ${{ github.event.pull_request.base.sha }}
-          GITHUB_DEFAULT_BRANCH: ${GITHUB_REF##*/}
+          GITHUB_DEFAULT_BRANCH: ${{ github.event.repository.default_branch }}
           GITGUARDIAN_API_KEY: ${{ secrets.GITGUARDIAN_API_KEY }}
 
       - name: "📦 Install Dependencies"
-        run: yarn install --frozen-lockfile
+        run: yarn install
 
       - name: "💅 Lint"
         run: yarn lint
@@ -55,18 +69,31 @@ jobs:
         run: yarn build --force && node sonar-args.js
 
       - name: "👨‍💻 Run Test"
-        run: yarn test --force
+        run: |
+          yarn test --force
+          yarn report
         env:
           NODE_ENV: 'test'
 
+      - name: "📤 Upload artifact"
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: ./mochawesome-report
+
+      - name: "🚀 Deploy Report"
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GH_TOKEN }}
+          publish_dir: ./mochawesome-report
+          destination_dir: mochawesome-report
+
       - name: "📊 Upload coverage report to Codecov"
-        uses: codecov/codecov-action@v2
+        uses: codecov/codecov-action@v1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
 
       - name: "📊 SonarCloud Scan"
-        uses: SonarSource/sonarcloud-github-action@v1
+        uses: SonarSource/sonarcloud-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
