--- a/packages/config/.babelrc
+++ b/packages/config/.babelrc
@@ -1,7 +1,8 @@
 {
   "plugins": [
     "@babel/plugin-proposal-object-rest-spread",
-    ["@babel/plugin-proposal-decorators", { "legacy": true }],
+    "@babel/plugin-syntax-decorators",
+    ["@babel/plugin-proposal-decorators", { "legacy": true, "decoratorsBeforeExport": true }],
     ["@babel/plugin-proposal-class-properties", { "loose": true }],
     ["@babel/plugin-proposal-private-methods", { "loose": true }],
     "@babel/plugin-proposal-optional-chaining"
