--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
   "include": [
     "packages/**/src/**/*.ts",
     "packages/**/src/**/*.tsx",
+    "packages/config/jest.config.js",
     "global.d.ts",
     "packages/tresdoce-types/index.d.ts"
   ],
@@ -11,12 +12,17 @@
     "dist",
     "test",
     "__test__",
+    "coverage",
+    ".turbo",
+    "test-results",
+    "src/__test__/*",
     "**/__test__/**/*",
     "**/*spec.ts",
     "**/*it.ts",
     "**/*test.ts",
     "**/*e2e.ts",
     "**/*e2e-spec.ts",
-    "coverage"
+    "junit.xml",
+    "test-report.xml"
   ]
 }
