--- a/package.json
+++ b/package.json
@@ -60,22 +60,22 @@
     ]
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.360.0",
+    "@aws-sdk/client-dynamodb": "^3.378.0",
     "@nestjs/axios": "^3.0.0",
     "@nestjs/class-validator": "^0.13.3",
-    "@nestjs/common": "^10.1.0",
+    "@nestjs/common": "^10.1.2",
     "@nestjs/config": "^3.0.0",
-    "@nestjs/core": "^10.1.0",
-    "@nestjs/microservices": "^10.0.3",
-    "@nestjs/platform-express": "^10.1.0",
-    "@nestjs/swagger": "^7.0.10",
+    "@nestjs/core": "^10.1.2",
+    "@nestjs/microservices": "^10.1.2",
+    "@nestjs/platform-express": "^10.1.2",
+    "@nestjs/swagger": "^7.1.4",
     "@nestjs/terminus": "^10.0.1",
     "@nestjs/typeorm": "^10.0.0",
-    "axios": "^1.3.6",
+    "axios": "^1.4.0",
     "axios-retry": "^3.5.1",
     "camunda-external-task-client-js": "^2.3.1",
     "dynamoose": "^3.2.0",
-    "fast-redact": "^3.2.0",
+    "fast-redact": "^3.3.0",
     "lodash": "^4.17.21",
     "luxon": "^3.3.0",
     "mongodb": "^5.6.0",
@@ -103,7 +103,7 @@
     "@elastic/elasticsearch-mock": "^2.0.0",
     "@nestjs/cli": "^10.0.5",
     "@nestjs/schematics": "^10.0.1",
-    "@nestjs/testing": "^10.0.3",
+    "@nestjs/testing": "^10.1.2",
     "@pika/cli": "^0.2.0",
     "@pika/pack": "^0.5.0",
     "@pika/plugin-build-node": "^0.9.2",
@@ -117,23 +117,25 @@
     "@types/fast-redact": "^3.0.2",
     "@types/glob": "^8.0.1",
     "@types/inline-css": "^3.0.1",
-    "@types/jest": "^29.5.2",
+    "@types/jest": "^29.5.3",
+    "@types/lodash": "^4.14.196",
+    "@types/luxon": "^3.3.1",
     "@types/mocha": "^10.0.1",
     "@types/mochawesome": "^6.2.1",
-    "@types/luxon": "^3.3.1",
-    "@types/node": "^20.3.2",
-    "@types/nodemailer": "^6.4.8",
+    "@types/node": "^20.4.5",
+    "@types/nodemailer": "^6.4.9",
     "@types/pug": "^2.0.6",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^9.0.2",
-    "@typescript-eslint/eslint-plugin": "^6.1.0",
-    "@typescript-eslint/parser": "^6.1.0",
-    "eslint": "^8.43.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
+    "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "husky": "^8.0.3",
-    "jest": "^29.5.0",
+    "jest": "^29.6.2",
     "jest-extended": "^4.0.0",
+    "jest-junit": "^16.0.0",
     "jest-mock-extended": "^3.0.1",
     "jest-sonar-reporter": "^2.0.0",
     "lerna": "^4.0.0",
@@ -149,10 +151,10 @@
     "supertest": "^6.2.2",
     "testcontainers": "^9.12.0",
     "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.3",
-    "ts-node": "^10.9.0",
+    "ts-loader": "^9.4.4",
+    "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "turbo": "^1.10.6",
+    "turbo": "^1.10.12",
     "typescript": "^4.9.5"
   }
 }
