--- a/packages/filters/package.json
+++ b/packages/filters/package.json
@@ -29,7 +29,7 @@
     "prebuild": "rimraf ../../dist/filters",
     "build": "pika build --out ../../dist/filters",
     "test": "jest --runInBand --coverage --forceExit",
-    "clean": "rimraf .turbo coverage test-results node_modules test-report.xml"
+    "clean": "rimraf .turbo coverage test-results node_modules test-report.xml junit.xml"
   },
   "publishConfig": {
     "access": "public",
@@ -37,9 +37,9 @@
   },
   "peerDependencies": {
     "@nestjs/class-validator": "^0.13.3",
-    "@nestjs/common": "^10.1.0",
-    "@nestjs/core": "^10.1.0",
-    "@nestjs/platform-express": "^10.1.0",
+    "@nestjs/common": "^10.1.2",
+    "@nestjs/core": "^10.1.2",
+    "@nestjs/platform-express": "^10.1.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5"
   },
