--- a/packages/health/package.json
+++ b/packages/health/package.json
@@ -29,7 +29,7 @@
     "prebuild": "rimraf ../../dist/health",
     "build": "pika build --out ../../dist/health",
     "test": "jest --runInBand --coverage --forceExit",
-    "clean": "rimraf .turbo coverage test-results node_modules test-report.xml"
+    "clean": "rimraf .turbo coverage test-results node_modules test-report.xml junit.xml"
   },
   "publishConfig": {
     "access": "public",
@@ -37,11 +37,11 @@
   },
   "peerDependencies": {
     "@nestjs/axios": "^3.0.0",
-    "@nestjs/common": "^10.1.0",
-    "@nestjs/core": "^10.1.0",
-    "@nestjs/microservices": "^10.0.3",
-    "@nestjs/platform-express": "^10.1.0",
-    "@nestjs/swagger": "^7.0.10",
+    "@nestjs/common": "^10.1.2",
+    "@nestjs/core": "^10.1.2",
+    "@nestjs/microservices": "^10.1.2",
+    "@nestjs/platform-express": "^10.1.2",
+    "@nestjs/swagger": "^7.1.4",
     "@nestjs/terminus": "^10.0.1",
     "@nestjs/typeorm": "^10.0.0",
     "lodash": "^4.17.21",
@@ -51,8 +51,8 @@
   },
   "dependencies": {
     "@nestjs/axios": "^3.0.0",
-    "@nestjs/microservices": "^10.0.3",
-    "@nestjs/swagger": "^7.0.10",
+    "@nestjs/microservices": "^10.1.2",
+    "@nestjs/swagger": "^7.1.4",
     "@nestjs/terminus": "^10.0.1",
     "@nestjs/typeorm": "^10.0.0",
     "lodash": "^4.17.21",
