--- a/packages/http-client/package.json
+++ b/packages/http-client/package.json
@@ -29,25 +29,25 @@
     "prebuild": "rimraf ../../dist/http-client",
     "build": "pika build --out ../../dist/http-client",
     "test": "jest --runInBand --coverage --forceExit",
-    "clean": "rimraf .turbo coverage test-results node_modules test-report.xml"
+    "clean": "rimraf .turbo coverage test-results node_modules test-report.xml junit.xml"
   },
   "publishConfig": {
     "access": "public",
     "directory": "../../dist/http-client"
   },
   "peerDependencies": {
-    "@nestjs/common": "^10.1.0",
+    "@nestjs/common": "^10.1.2",
     "@nestjs/config": "^3.0.0",
-    "@nestjs/core": "^10.1.0",
-    "@nestjs/platform-express": "^10.1.0",
-    "axios": "^1.3.6",
+    "@nestjs/core": "^10.1.2",
+    "@nestjs/platform-express": "^10.1.2",
+    "axios": "^1.4.0",
     "axios-retry": "^3.5.1",
     "lodash": "^4.17.21",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5"
   },
   "dependencies": {
-    "axios": "^1.3.6",
+    "axios": "^1.4.0",
     "axios-retry": "^3.5.1",
     "lodash": "^4.17.21"
   },
