--- a/packages/paas/package.json
+++ b/packages/paas/package.json
@@ -30,16 +30,16 @@
     "prebuild": "rimraf ../../dist/paas",
     "build": "pika build --out ../../dist/paas",
     "test": "echo \"Error: no test specified\"",
-    "clean": "rimraf .turbo coverage test-results node_modules test-report.xml"
+    "clean": "rimraf .turbo coverage test-results node_modules test-report.xml junit.xml"
   },
   "publishConfig": {
     "access": "public",
     "directory": "../../dist/paas"
   },
   "peerDependencies": {
-    "@nestjs/common": "^10.1.0",
-    "@nestjs/core": "^10.1.0",
-    "@nestjs/platform-express": "^10.1.0",
+    "@nestjs/common": "^10.1.2",
+    "@nestjs/core": "^10.1.2",
+    "@nestjs/platform-express": "^10.1.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5"
   },
