--- a/packages/redis/package.json
+++ b/packages/redis/package.json
@@ -29,16 +29,16 @@
     "prebuild": "rimraf ../../dist/redis",
     "build": "pika build --out ../../dist/redis",
     "test": "jest --runInBand --coverage --forceExit",
-    "clean": "rimraf .turbo coverage test-results node_modules test-report.xml"
+    "clean": "rimraf .turbo coverage test-results node_modules test-report.xml junit.xml"
   },
   "publishConfig": {
     "access": "public",
     "directory": "../../dist/redis"
   },
   "peerDependencies": {
-    "@nestjs/common": "^10.1.0",
-    "@nestjs/core": "^10.1.0",
-    "@nestjs/platform-express": "^10.1.0",
+    "@nestjs/common": "^10.1.2",
+    "@nestjs/core": "^10.1.2",
+    "@nestjs/platform-express": "^10.1.2",
     "redis": "^4.6.7",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5",
