--- a/packages/typeorm/package.json
+++ b/packages/typeorm/package.json
@@ -29,16 +29,16 @@
     "prebuild": "rimraf ../../dist/typeorm",
     "build": "pika build --out ../../dist/typeorm",
     "test": "jest --runInBand --coverage --forceExit",
-    "clean": "rimraf .turbo coverage test-results node_modules test-report.xml"
+    "clean": "rimraf .turbo coverage test-results node_modules test-report.xml junit.xml"
   },
   "publishConfig": {
     "access": "public",
     "directory": "../../dist/typeorm"
   },
   "peerDependencies": {
-    "@nestjs/common": "^10.1.0",
-    "@nestjs/core": "^10.1.0",
-    "@nestjs/platform-express": "^10.1.0",
+    "@nestjs/common": "^10.1.2",
+    "@nestjs/core": "^10.1.2",
+    "@nestjs/platform-express": "^10.1.2",
     "@nestjs/typeorm": "^10.0.0",
     "mongodb": "^5.6.0",
     "mysql": "^2.18.1",
