--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -29,23 +29,23 @@
     "prebuild": "rimraf ../../dist/utils",
     "build": "pika build --out ../../dist/utils",
     "test": "jest --runInBand --coverage --forceExit",
-    "clean": "rimraf .turbo coverage test-results node_modules test-report.xml"
+    "clean": "rimraf .turbo coverage test-results node_modules test-report.xml junit.xml"
   },
   "publishConfig": {
     "access": "public",
     "directory": "../../dist/utils"
   },
   "peerDependencies": {
-    "@nestjs/common": "^10.1.0",
-    "@nestjs/core": "^10.1.0",
-    "@nestjs/platform-express": "^10.1.0",
-    "fast-redact": "^3.2.0",
+    "@nestjs/common": "^10.1.2",
+    "@nestjs/core": "^10.1.2",
+    "@nestjs/platform-express": "^10.1.2",
+    "fast-redact": "^3.3.0",
     "luxon": "^3.3.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5"
   },
   "dependencies": {
-    "fast-redact": "^3.2.0",
+    "fast-redact": "^3.3.0",
     "luxon": "^3.3.0"
   },
   "devDependencies": {
