revert(workflow): rollback pipelines

--- a/.github/workflows/branches.yml
+++ b/.github/workflows/branches.yml
@@ -3,14 +3,29 @@ name: "Branches"
 on:
   push:
     branches: [ "feat/*", "fix/*", "refactor/*", "chore/*", "docs/*", "test/*", "build/*", "perf/*", "style/*", "revert/*" ]
-  workflow_dispatch:
 
 jobs:
+  setup:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node: [ '16.14.2', '18.17.0' ]
+    name: "Setup"
+    steps:
+      - name: "⚙ Set up Node.js v${{ matrix.node }}"
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node }}
+
+      - name: "✅ Checkout repository"
+        uses: actions/checkout@v3
+
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         node: [ '16.14.2', '18.17.0' ]
+    needs: setup
     name: "Build"
     steps:
       - name: "⚙ Set up Node.js v${{ matrix.node }}"
@@ -43,7 +58,7 @@ jobs:
           GITGUARDIAN_API_KEY: ${{ secrets.GITGUARDIAN_API_KEY }}
 
       - name: "📦 Install Dependencies"
-        run: yarn install --frozen-lockfile
+        run: yarn install
 
       - name: "💅 Lint"
         run: yarn lint
@@ -57,7 +72,7 @@ jobs:
           NODE_ENV: 'test'
 
       - name: "📊 Upload coverage report to Codecov"
-        uses: codecov/codecov-action@v2
+        uses: codecov/codecov-action@v1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
 
