chore: add jest junit

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,9 @@ coverage
 /coverage
 /.nyc_output
 test-report.xml
+junit.xml
+packages/*/test-report.xml
+packages/*/junit.xml
 packages/*/test-results
 ./packages/*/test-results
 packages/*/test-results/*
