--- a/.github/workflows/branches.yml
+++ b/.github/workflows/branches.yml
@@ -71,6 +71,12 @@ jobs:
         env:
           NODE_ENV: 'test'
 
+      - name: "📊 Publish Test Report"
+        uses: mikepenz/action-junit-report@v2
+        if: always()
+        with:
+          report_paths: '/packages/**/junit.xml'
+
       - name: "📊 Upload coverage report to Codecov"
         uses: codecov/codecov-action@v1
         with:
