--- a/packages/paas/package.json
+++ b/packages/paas/package.json
@@ -30,7 +30,7 @@
     "prebuild": "rimraf ../../dist/paas",
     "build": "pika build --out ../../dist/paas",
     "test": "echo \"Error: no test specified\"",
-    "clean": "rimraf .turbo coverage test-results node_modules test-report.xml junit.xml"
+    "clean": "rimraf .turbo coverage test-results reports node_modules test-report.xml junit.xml"
   },
   "publishConfig": {
     "access": "public",
