--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -74,6 +74,12 @@ jobs:
         env:
           NODE_ENV: 'test'
 
+      - name: "📊 Publish Test Report"
+        uses: mikepenz/action-junit-report@v3
+        if: always()
+        with:
+          report_paths: '**/junit.xml'
+
       - name: "📤 Upload artifact"
         uses: actions/upload-pages-artifact@v1
         with:
