docs: edit versions in readmes

--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -80,17 +80,17 @@ jobs:
         with:
           report_paths: '**/junit.xml'
 
-      - name: "📤 Upload artifact"
-        uses: actions/upload-pages-artifact@v1
-        with:
-          path: ./mochawesome-report
+      #- name: "📤 Upload artifact"
+      #  uses: actions/upload-pages-artifact@v1
+      #  with:
+      #    path: ./mochawesome-report
 
-      - name: "🚀 Deploy Report"
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GH_TOKEN }}
-          publish_dir: ./mochawesome-report
-          destination_dir: mochawesome-report
+      #- name: "🚀 Deploy Report"
+      #  uses: peaceiris/actions-gh-pages@v3
+      #  with:
+      #    github_token: ${{ secrets.GH_TOKEN }}
+      #    publish_dir: ./mochawesome-report
+      #    destination_dir: mochawesome-report
 
       - name: "📊 Upload coverage report to Codecov"
         uses: codecov/codecov-action@v1
