--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tresdoce-nestjs-toolkit/root",
-  "description": "Tresdoce NestJs Toolkit",
+  "description": "Tresdoce NestJS Toolkit",
   "author": {
     "name": "Maximiliano \"Mex\" Delgado",
     "email": "mdelgado@tresdoce.com.ar",
