--- a/packages/filters/package.json
+++ b/packages/filters/package.json
@@ -43,6 +43,9 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5"
   },
+  "dependencies": {
+    "@tresdoce-nestjs-toolkit/core": "^1.1.0-beta.0"
+  },
   "devDependencies": {
     "@tresdoce-nestjs-toolkit/config": "^0.3.2",
     "@types/tresdoce-nestjs-toolkit": "^0.2.1"
