--- a/packages/health/package.json
+++ b/packages/health/package.json
@@ -55,6 +55,7 @@
     "@nestjs/swagger": "^7.1.8",
     "@nestjs/terminus": "^10.0.1",
     "@nestjs/typeorm": "^10.0.0",
+    "@tresdoce-nestjs-toolkit/core": "^1.1.0-beta.0",
     "lodash": "^4.17.21",
     "typeorm": "^0.3.17"
   },
