--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -39,8 +39,12 @@
     "@nestjs/common": "^10.1.3",
     "@nestjs/core": "^10.1.3",
     "@nestjs/platform-express": "^10.1.3",
+    "joi": "^17.5.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5"
+  },
+  "dependencies": {
+    "joi": "^17.5.0"
   },
   "devDependencies": {
     "@tresdoce-nestjs-toolkit/config": "^0.3.2",
