--- a/packages/tracing/package.json
+++ b/packages/tracing/package.json
@@ -36,37 +36,37 @@
     "directory": "../../dist/tracing"
   },
   "peerDependencies": {
-    "@nestjs/common": "^10.1.3",
-    "@nestjs/core": "^10.1.3",
-    "@nestjs/platform-express": "^10.1.3",
-    "@opentelemetry/core": "^1.14.0",
-    "@opentelemetry/exporter-trace-otlp-proto": "0.40.0",
-    "@opentelemetry/id-generator-aws-xray": "1.1.2",
-    "@opentelemetry/instrumentation-http": "0.40.0",
-    "@opentelemetry/propagator-aws-xray": "1.2.1",
-    "@opentelemetry/propagator-b3": "1.14.0",
-    "@opentelemetry/propagator-jaeger": "1.14.0",
-    "@opentelemetry/resources": "1.14.0",
-    "@opentelemetry/sdk-node": "0.40.0",
-    "@opentelemetry/sdk-trace-base": "1.14.0",
-    "@opentelemetry/semantic-conventions": "1.14.0",
-    "luxon": "^3.3.0",
+    "@nestjs/common": "^10.2.2",
+    "@nestjs/core": "^10.2.2",
+    "@nestjs/platform-express": "^10.2.2",
+    "@opentelemetry/core": "1.14.0",
+    "@opentelemetry/exporter-trace-otlp-proto": "0.41.2",
+    "@opentelemetry/id-generator-aws-xray": "1.2.1",
+    "@opentelemetry/instrumentation-http": "0.41.2",
+    "@opentelemetry/propagator-aws-xray": "1.3.1",
+    "@opentelemetry/propagator-b3": "1.15.2",
+    "@opentelemetry/propagator-jaeger": "1.15.2",
+    "@opentelemetry/resources": "1.15.2",
+    "@opentelemetry/sdk-node": "0.41.2",
+    "@opentelemetry/sdk-trace-base": "1.15.2",
+    "@opentelemetry/semantic-conventions": "1.15.2",
+    "luxon": "^3.4.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5"
   },
   "dependencies": {
     "@opentelemetry/core": "1.14.0",
-    "@opentelemetry/exporter-trace-otlp-proto": "0.40.0",
-    "@opentelemetry/id-generator-aws-xray": "1.1.2",
-    "@opentelemetry/instrumentation-http": "0.40.0",
-    "@opentelemetry/propagator-aws-xray": "1.2.1",
-    "@opentelemetry/propagator-b3": "1.14.0",
-    "@opentelemetry/propagator-jaeger": "1.14.0",
-    "@opentelemetry/resources": "1.14.0",
-    "@opentelemetry/sdk-node": "0.40.0",
-    "@opentelemetry/sdk-trace-base": "1.14.0",
-    "@opentelemetry/semantic-conventions": "1.14.0",
-    "luxon": "^3.3.0"
+    "@opentelemetry/exporter-trace-otlp-proto": "0.41.2",
+    "@opentelemetry/id-generator-aws-xray": "1.2.1",
+    "@opentelemetry/instrumentation-http": "0.41.2",
+    "@opentelemetry/propagator-aws-xray": "1.3.1",
+    "@opentelemetry/propagator-b3": "1.15.2",
+    "@opentelemetry/propagator-jaeger": "1.15.2",
+    "@opentelemetry/resources": "1.15.2",
+    "@opentelemetry/sdk-node": "0.41.2",
+    "@opentelemetry/sdk-trace-base": "1.15.2",
+    "@opentelemetry/semantic-conventions": "1.15.2",
+    "luxon": "^3.4.2"
   },
   "devDependencies": {
     "@tresdoce-nestjs-toolkit/config": "^0.3.2-beta.0",
