--- a/package.json
+++ b/package.json
@@ -144,6 +144,7 @@
     "mochawesome": "^7.1.3",
     "mochawesome-merge": "^4.3.0",
     "mochawesome-report-generator": "^6.2.0",
+    "nock": "^13.3.6",
     "nodemailer-mock": "^2.0.1",
     "plop": "^4.0.0",
     "prettier": "^3.0.3",
