--- a/packages/commons/package.json
+++ b/packages/commons/package.json
@@ -36,11 +36,19 @@
     "directory": "../../dist/commons"
   },
   "peerDependencies": {
+    "jest-extended": "^4.0.1",
+    "jest-junit": "^16.0.0",
+    "jest-mock-extended": "^3.0.5",
+    "jest-sonar-reporter": "^2.0.0",
     "terser-webpack-plugin": "^5.3.9",
     "webpack-merge": "^5.9.0",
     "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
+    "jest-extended": "^4.0.1",
+    "jest-junit": "^16.0.0",
+    "jest-mock-extended": "^3.0.5",
+    "jest-sonar-reporter": "^2.0.0",
     "terser-webpack-plugin": "^5.3.9",
     "webpack-merge": "^5.9.0",
     "webpack-node-externals": "^3.0.0"
