--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "fast-redact": "^3.3.0",
     "lodash": "^4.17.21",
     "luxon": "^3.4.3",
+    "minimatch": "^9.0.3",
     "mongodb": "^6.1.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.1",
