--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -80,18 +80,6 @@ jobs:
         with:
           report_paths: '**/junit.xml'
 
-      #- name: "📤 Upload artifact"
-      #  uses: actions/upload-pages-artifact@v1
-      #  with:
-      #    path: ./mochawesome-report
-
-      #- name: "🚀 Deploy Report"
-      #  uses: peaceiris/actions-gh-pages@v3
-      #  with:
-      #    github_token: ${{ secrets.GH_TOKEN }}
-      #    publish_dir: ./mochawesome-report
-      #    destination_dir: mochawesome-report
-
       - name: "📊 Upload coverage report to Codecov"
         uses: codecov/codecov-action@v1
         with:
@@ -102,3 +90,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+      - name: "🦠 Snyk to check for vulnerabilities"
+        uses: snyk/actions/node@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
