--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.490.0",
     "@nestjs/axios": "^3.0.0",
+    "@nestjs/class-transformer": "^0.4.0",
     "@nestjs/class-validator": "^0.13.4",
     "@nestjs/common": "^10.3.0",
     "@nestjs/config": "^3.1.1",
@@ -74,6 +75,7 @@
     "axios": "^1.6.5",
     "axios-retry": "^4.0.0",
     "camunda-external-task-client-js": "^2.3.1",
+    "class-transformer": "^0.5.1",
     "dynamoose": "^4.0.0",
     "fast-redact": "^3.3.0",
     "lodash": "^4.17.21",
@@ -91,12 +93,14 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@automock/jest": "^2.1.0",
     "@babel/core": "^7.23.7",
     "@babel/parser": "^7.23.6",
     "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "@babel/plugin-proposal-decorators": "^7.23.7",
+    "@babel/plugin-proposal-decorators": "^7.23.9",
     "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
     "@babel/plugin-proposal-optional-chaining": "^7.20.7",
+    "@babel/plugin-syntax-decorators": "^7.16.7",
     "@babel/preset-typescript": "^7.23.3",
     "@babel/traverse": "^7.23.7",
     "@commitlint/cli": "^17.8.1",
