--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -36,14 +36,20 @@
     "directory": "../../dist/core"
   },
   "peerDependencies": {
+    "@nestjs/class-transformer": "^0.4.0",
+    "@nestjs/class-validator": "^0.13.4",
     "@nestjs/common": "^10.3.0",
     "@nestjs/core": "^10.3.0",
     "@nestjs/platform-express": "^10.3.0",
+    "class-transformer": "^0.5.1",
     "joi": "^17.11.1",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.5.5"
   },
   "dependencies": {
+    "@nestjs/class-transformer": "^0.4.0",
+    "@nestjs/class-validator": "^0.13.4",
+    "class-transformer": "^0.5.1",
     "joi": "^17.11.1"
   },
   "devDependencies": {
@@ -60,7 +66,7 @@
   "@pika/pack": {
     "pipeline": [
       [
-        "@pika/plugin-standard-pkg",
+        "@pika/plugin-ts-standard-pkg",
         {
           "exclude": [
             "**/__test__/*",
@@ -71,16 +77,6 @@
       ],
       [
         "@pika/plugin-build-node",
-        {
-          "exclude": [
-            "**/__test__/*",
-            "**/__test__/**/*.crt",
-            "**/__test__/**/*.key"
-          ]
-        }
-      ],
-      [
-        "@pika/plugin-build-types",
         {
           "exclude": [
             "**/__test__/*",
