--- a/package.json
+++ b/package.json
@@ -88,21 +88,21 @@
     "redis": "^4.6.12",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.5.5",
-    "testcontainers": "^10.6.0",
+    "testcontainers": "^10.9.0",
     "typeorm": "^0.3.19",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@automock/jest": "^2.1.0",
-    "@babel/core": "^7.23.7",
-    "@babel/parser": "^7.23.6",
-    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/core": "^7.24.3",
+    "@babel/parser": "^7.24.1",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-decorators": "^7.23.9",
     "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
-    "@babel/plugin-proposal-optional-chaining": "^7.20.7",
-    "@babel/plugin-syntax-decorators": "^7.16.7",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
+    "@babel/plugin-syntax-decorators": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
-    "@babel/traverse": "^7.23.7",
+    "@babel/traverse": "^7.24.1",
     "@commitlint/cli": "^17.8.1",
     "@commitlint/config-conventional": "^17.8.1",
     "@elastic/elasticsearch-mock": "^2.0.0",
@@ -116,6 +116,8 @@
     "@pika/plugin-standard-pkg": "^0.9.2",
     "@pika/plugin-ts-standard-pkg": "^0.9.2",
     "@types/camunda-external-task-client-js": "^1.3.6",
+    "@types/cookie": "^0.6.0",
+    "@types/cookie-signature": "^1.1.2",
     "@types/ejs": "^3.1.5",
     "@types/elasticsearch": "^5.0.43",
     "@types/express": "^4.17.21",
@@ -132,12 +134,12 @@
     "@types/pug": "^2.0.10",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.7",
-    "@typescript-eslint/eslint-plugin": "^6.19.0",
-    "@typescript-eslint/parser": "^6.19.0",
+    "@typescript-eslint/eslint-plugin": "^7.3.1",
+    "@typescript-eslint/parser": "^7.3.1",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "husky": "^8.0.3",
+    "husky": "^9.0.11",
     "jest": "^29.7.0",
     "jest-extended": "^4.0.1",
     "jest-junit": "^16.0.0",
@@ -155,12 +157,12 @@
     "prettier": "^3.2.2",
     "rimraf": "^5.0.1",
     "supertest": "^6.3.4",
-    "testcontainers": "^10.6.0",
+    "testcontainers": "^10.9.0",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "turbo": "^1.11.3",
+    "turbo": "^1.13.3",
     "typescript": "^4.9.5"
   }
 }
