--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -42,6 +42,10 @@
     "@nestjs/core": "^10.3.0",
     "@nestjs/platform-express": "^10.3.0",
     "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "cookie": "^0.6.0",
+    "cookie-signature": "^1.2.1",
+    "csrf": "^3.1.0",
     "joi": "^17.11.1",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.5.5"
@@ -50,6 +54,10 @@
     "@nestjs/class-transformer": "^0.4.0",
     "@nestjs/class-validator": "^0.13.4",
     "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "cookie": "^0.6.0",
+    "cookie-signature": "^1.2.1",
+    "csrf": "^3.1.0",
     "joi": "^17.11.1"
   },
   "devDependencies": {
